# simple_video_server

./: .gitignore  README.md  sdkconfig.defaults.esp32p4  sdkconfig.old
components/example_video_common/: CMakeLists.txt  Kconfig.projbuild
components/example_video_common/include/: example_video_common.h
components/example_video_common/include/boards/jc-esp32-p4-m3-dev/: example_video_common_board.h
components/example_video_common/include/boards/ws-esp32-p4-wifi6/: example_video_common_board.h
main/: simple_video_server_example.c
